[package]
name = "ski"
description = "A modern library and standard for \"good enough\" encryption, designed with embedded devices and hardware-constrained environments in mind."
readme = "README.md"
version = "0.1.0"
authors = ["Graham Northup <grissess@nexusg.org>"]
edition = "2018"
license = "CC0-1.0"
repository = "https://github.com/Grissess/ski-rust/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.12.3"
rust-crypto = "0.2.36"
clap = {version = "2.27.0", features = ["yaml"]}
rand = "0.5.0"
rpassword = "4.0.5"
argon2rs = "0.2.5"
